<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/main"
    android:gravity="center"
    android:padding="24dp">

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_menu"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_marginBottom="12dp" />

    <TextView
        android:id="@+id/txtSubtitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtitulo_menu"
        android:textSize="18sp"
        android:layout_marginBottom="24dp" />

    <Button
        android:id="@+id/btnEjercicio1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ejercicio_1" />

    <Button
        android:id="@+id/btnEjercicio2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ejercicio_2" />

    <Button
        android:id="@+id/btnEjercicio3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ejercicio_3" />

</LinearLayout>